# nexus-studio

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  README_EN.md  SYSTEM_TEST_PLAN.md  develop_workflow.txt  pyproject.toml  requirements.txt  系统测试矩阵覆盖跟踪.xlsx
.github/agents/: trellis-check.agent.md  trellis-implement.agent.md
.github/copilot/hooks/: session-start.py
.github/prompts/: continue.prompt.md
.trellis/: .template-hashes.json  workflow.md
.trellis/scripts/: task.py
src/aistudio_api/: __init__.py  config.py  main.py
tests/system/: build_matrix_coverage_excel.py  host-ui-smoke.py  system-test-wsl.sh  test_matrix_harness_contract.py
tests/unit/: test_account_auth_activation.py  test_account_credentials.py  test_account_health_and_selection.py  test_api_responses.py  test_camoufox_launcher.py  test_capture_service.py  test_config_routes.py  test_gateway_replay_request_contract.py  test_gateway_session_readiness.py  test_gemini_native_routes.py  test_gemini_request_normalization.py  test_image_generation_service.py  test_image_session_history.py  test_local_studio.py  test_login_service.py  test_model_capabilities.py  test_native_ui_sender.py  test_native_ui_worker_pool.py  test_openai_compatibility.py  test_provider_manager.py  test_pure_http_boundary.py  test_request_logs.py  test_request_rewriter.py  test_response_parser.py  test_snapshot_cache.py  test_static_frontend_capabilities.py  test_streaming_stability.py  test_system_test_plan_architecture_contract.py  test_tier_detector.py  test_wire_codec_mapping.py
(+177 files in other folders)
