[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-studio"
version = "1.0.0"
description = "Nexus Studio local API proxy for Google AI Studio"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.9.0",
  "camoufox[geoip]>=0.4.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "orjson>=3.9.0",
  "pydantic>=2.0.0",
  "playwright>=1.45.0,<1.60",
  "uvicorn>=0.30.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
]

[project.scripts]
nexus-studio = "aistudio_api.main:main"
nexus-studio-server = "aistudio_api.api.app:main"
nexus-studio-client = "aistudio_api.infrastructure.gateway.client:cli_main"
aistudio-api = "aistudio_api.main:main"
aistudio-api-server = "aistudio_api.api.app:main"
aistudio-api-client = "aistudio_api.infrastructure.gateway.client:cli_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
